--- a/MockupProjetoFinal/Info.plist
+++ b/MockupProjetoFinal/Info.plist
@@ -2,8 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Porque sim por favorrr</string>
 	<key>NS</key>
 	<string></string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Porque sim porfavorzinho</string>
 	<key>CFBundleDisplayName</key>
 	<string></string>
 	<key>LSApplicationCategoryType</key>
